--- a/src/html/report-a-sighting.hbs
+++ b/src/html/report-a-sighting.hbs
@@ -3,7 +3,7 @@
 {{!-- Form --}}
 {{#> nbForm}}
 {{#*inline "form"}}
-<form id="nb-form-{{page.name}}" class="uk-form-stacked InputfieldForm" method="post" data-uk-nb-form novalidate
+<form id="nb-form-{{page.name}}" class="uk-form-stacked InputfieldForm uk-margin-top" method="post" data-uk-nb-form novalidate
     data-colspacing="1">
 
     <h2>Sighting Information</h2>
