--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -3,7 +3,7 @@
 	padding-top: 130px;
 	padding-left: 20px;
 	padding-right: 20px;
-	height: 100%;
+	// height: 100%;
 
 	&.home {
 		min-height: calc(100vh - 130px);
