--- a/src/html/the-project.hbs
+++ b/src/html/the-project.hbs
@@ -1,6 +1,6 @@
 {{#*inline "blocks"}}
 
-<section class='timeline-section'>
+<section class='timeline-section uk-margin-top'>
     {{#> ukContainer}}
     {{#*inline "out"}}
     <h2>Start of the Project 2019</h2>
