--- a/src/html/home.hbs
+++ b/src/html/home.hbs
@@ -32,28 +32,14 @@
 				nowhere else.</p>
 			<span class="uk-text-bold uk-text-lead">Learn more</span>
 		</div>
-		<div class='uk-grid-match uk-grid-small uk-child-width-1-2' data-uk-grid>
-			<div class='wildlife-box'>
-				<div class='uk-position-relative'>
-					<div class='uk-background-cover' data-src='./img/wildlife-img-1.jpg' data-uk-img></div>
-				</div>
-			</div>
-			<div class='wildlife-box'>
-				<div class='uk-position-relative'>
-					<div class='uk-background-cover' data-src='./img/wildlife-img-2.jpg' data-uk-img></div>
-				</div>
-			</div>
-			<div class='wildlife-box'>
-				<div class='uk-position-relative'>
-					<div class='uk-background-cover' data-src='./img/wildlife-img-4.jpg' data-uk-img></div>
-				</div>
-			</div>
-			<div class='wildlife-box'>
-				<div class='uk-position-relative'>
-					<div class='uk-background-cover' data-src='./img/wildlife-img-3.jpg' data-uk-img></div>
-				</div>
-			</div>
-		</div>
+		{{#> ukGrid class="uk-grid-match uk-grid-small uk-child-width-1-2"}}
+		{{#*inline "cells"}}
+		{{> wildlifeBox image="wildlife-img-1.jpg" }}
+		{{> wildlifeBox image="wildlife-img-2.jpg" }}
+		{{> wildlifeBox image="wildlife-img-3.jpg" }}
+		{{> wildlifeBox image="wildlife-img-4.jpg" }}
+		{{/inline}}
+		{{/ukGrid}}
 	</div>
 </section>
 
@@ -63,12 +49,19 @@
 		<div class="links-text">
 			<h2>News & Events</h2>
 		</div>
-		<ul class='uk-grid-match uk-grid-large uk-child-width-1-2@m' data-uk-grid
-			data-uk-height-match=".link-box-title">
-			{{> linkBoxes category="News" src="./img/link-img-1.jpg" date="3 Dec 2019" title="Welcome to the 83rd Stoat Snippet!" text="Tracking tunnels – also known as footprint tunnels - are used to detect or monitor the presence of mammals in an area by identifying their footprints..."}}
-			{{> linkBoxes category="Event" src="./img/link-img-2.jpg" date="8 Aug 2017" title="Major project to protect Orkney’s internationally important wildlife wins Heritage Lottery Fund support" text="A short description text should gently catch the user's eye, initiating the reading of the page content."}}
-		</ul>
-		{{> ukButton link="#" label="View all news & events" style="primary" size="large" icon="arrow-right"}}
+		{{#> ukGrid class="uk-grid-match uk-grid-large uk-child-width-1-2@m" dataUkHeightMatch=".link-box-title"}}
+		{{#*inline "cells"}}
+		<li>
+			{{> linkBox href="#" category="News" src="./img/link-img-1.jpg" date="3 Dec 2019" title="Welcome to the 83rd Stoat Snippet!" text="Tracking tunnels – also known as footprint tunnels - are used to detect or monitor the presence of mammals in an area by identifying their footprints..."}}
+		</li>
+		<li>
+			{{> linkBox href="#" category="Event" src="./img/link-img-2.jpg" date="8 Aug 2017" title="Major project to protect Orkney’s internationally important wildlife wins Heritage Lottery Fund support" text="A short description text should gently catch the user's eye, initiating the reading of the page content."}}
+		</li>
+		{{/inline}}
+		{{/ukGrid}}
+		<div class="uk-margin-medium-top">
+			{{> ukButton link="#" label="View all news & events" style="primary" size="large" icon="arrow-right"}}
+		</div>
 	</div>
 </section>
 
@@ -81,65 +74,22 @@
 		<div class='links-text'>
 			<h2>Get Involved</h2>
 		</div>
-		<ul class='uk-grid-match uk-child-width-1-4@l uk-child-width-1-3@m uk-child-width-1-2@s' data-uk-grid
-			data-uk-height-match='target: .uk-card'>
-			<li>
-				<div class='link-box uk-card'>
-					<div
-						class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-between uk-light uk-text-center'>
-						<svg viewBox="0 0 24 24">
-							<use xlink:href="./symbol/icons.svg#volunteer"></use>
-						</svg>
-						<h3 class='uk-card-title uk-text-bold'>Volunteer</h3>
-					</div>
-					<a href='#' class='uk-position-cover' aria-label="Find out more"></a>
-				</div>
-			</li>
-			<li>
-				<div class='link-box uk-card'>
-					<div class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-right uk-light uk-text-center orkney-map'
-						data-uk-img style="background-image: url('./img/orkney-map.png');">
-						<span class="font-report-a-stoat" role="presentation">
-							<span class='stoat-pin' role='presentation'>
-								<svg viewBox="0 0 24 24">
-									<use xlink:href="./symbol/icons.svg#brown-stoat"></use>
-								</svg>
-								<span class='pulse' role='presentation'></span>
-								<span class='pulse' role='presentation'></span>
-								<span class='pulse' role='presentation'></span>
-								<span class='pulse' role='presentation'></span>
-							</span>
-						</span>
-						<h3 class='uk-card-title uk-text-bold'>Report a stoat</h3>
-					</div>
-					<a href='#' class='uk-position-cover' aria-label="Find out more"></a>
-				</div>
-			</li>
-			<li>
-				<div class='link-box uk-card'>
-					<div
-						class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-between uk-light uk-text-center'>
-						<svg viewBox="0 0 24 24">
-							<use xlink:href="./symbol/icons.svg#offer-land-access"></use>
-						</svg>
-						<h3 class='uk-card-title uk-text-bold'>Offer land access</h3>
-					</div>
-					<a href='#' class='uk-position-cover' aria-label="Find out more"></a>
-				</div>
-			</li>
-			<li>
-				<div class='link-box uk-card'>
-					<div
-						class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-between uk-light uk-text-center'>
-						<svg viewBox="0 0 24 24">
-							<use xlink:href="./symbol/icons.svg#donate"></use>
-						</svg>
-						<h3 class='uk-card-title uk-text-bold'>Donate</h3>
-					</div>
-					<a href='#' class='uk-position-cover' aria-label="Find out more"></a>
-				</div>
-			</li>
-		</ul>
+		{{#> ukGrid class="uk-grid-match uk-child-width-1-4@l uk-child-width-1-3@m uk-child-width-1-2@s" dataUkHeightMatch=".uk-card"}}
+		{{#*inline "cells"}}
+		<li>
+			{{> involveLink href="#" icon="volunteer" title="Volunteer" }}
+		</li>
+		<li>
+			{{> involveLink stoat="brown-stoat" image="orkney-map.png" href="#" title="Report a stoat" }}
+		</li>
+		<li>
+			{{> involveLink href="#" icon="offer-land-access" title="Offer land access" }}
+		</li>
+		<li>
+			{{> involveLink href="#" icon="donate" title="Donate" }}
+		</li>
+		{{/inline}}
+		{{/ukGrid}}
 	</div>
 </section>
 
@@ -198,18 +148,6 @@
 			<path class="st0" d="M658.7,128.3c-1.9,42.9,12.2,70.7,6.8,153.7c-1.2,17.6,2.4,53.1-4.9,68.9c-4.2,8.9-30.2,3.7-39.6,5.7
 	c-37.4,7.2-74.9,0.9-112.6,4.6c-41.7,4-82.5,8.6-123,0.7c-24-4.6-188.8-6.1-385.4-5.5V0l640.2,0c0,0.4,29.2,0.7,29.2,1.1
 	c0.1,23.5-0.8,14.2,0.4,37.7c0.3,6.7-1,13.7-2.2,20.4C664.4,76.2,660.7,85.3,658.7,128.3z" />
-		</clipPath>
-	</defs>
-</svg>
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 469 352' style='position: absolute;' height='0' width='0'>
-	<defs>
-		<clipPath id='svgPathNewsImg' clipPathUnits='objectBoundingBox' transform='scale(0.00213, 0.0028)'>
-			<path class='st0' d='M13,326.1c-1.7-9.6-2.4-20.7-2.9-31.3c-1.7-31.3-2.9-62.7-4.6-93.9c-0.4-7.6-2.1-14.6-2.8-22.2
-	c-0.9-10.2-1.5-20.7-2.1-31c-0.3-4.1-0.5-8.3-0.4-12.4c0.6-14.3,1.6-28.6,1.9-43C2.3,76,3.3,61,7.5,47.3c1.9-6.2,3.4-17.3,4.2-33.2
-	C12.1,4.5,77.5-4.6,97.5,2.5c6.6,2.3,269.2-9.3,359.1,5.8c9.7,1.6,7.5,15.5,12.4,20.8c-0.1,26.7,0,53.5-0.1,80.2
-	c0,3.7-0.2,7.3-0.4,11c-0.5,11.2-1.3,22.4-1.4,33.6c-0.1,15.2,0.7,30.4,0.4,45.6c-0.6,31.2-1.7,62.3-2.7,93.5
-	c-0.2,6.8-0.3,13.8-1,20.3c-2.7,23.1-4.3,24.3-11.6,25.8c-8.8,1.8-17.6,2.3-26.4,5.9c-8.4,3.3-17.3,0.3-25.9-2.6
-	c-12.8-4.4-263.8,4.8-290.9,8.2c-27.1,3.5-49.6,0-60.4-2.4c-9.8-2.2-19.5-5.6-29.2-10C17,337,13.9,331.6,13,326.1z' />
 		</clipPath>
 	</defs>
 </svg>
