--- a/src/scss/components/_links-box.scss
+++ b/src/scss/components/_links-box.scss
@@ -62,6 +62,10 @@
         }
     }
 
+    .uk-position-cover {
+        z-index: 11;
+    }
+
     >span {
         &.uk-text-bold {
             position: absolute;
@@ -150,11 +154,6 @@
         background-color: $green-dark-alt;
         padding-right: 65px;
         padding: 25px 105px 25px 40px;
-    }
-
-    .read-more {
-        bottom: 30px;
-        height: calc(100% - 32px);
     }
 
     @include hover {
