--- a/src/scss/utils/_print.scss
+++ b/src/scss/utils/_print.scss
@@ -23,6 +23,7 @@
 	.links-section.involve,
 	.link-box-alt a,
 	.intro-section,
+	.share-widget,
 	.uk-form-stacked .uk-form-label a,
 	.timeline-line {
 		display: none !important;
