Render navigation (mobile also) added and timeline small breakpoint switched to medium

--- a/src/html/partials/main.hbs
+++ b/src/html/partials/main.hbs
@@ -18,30 +18,6 @@
 
 <body>
 
-	{{!-- <header class="header" data-uk-sticky="media: 960; animation: uk-animation-slide-top; show-on-up: true;">
-		<nav class="uk-navbar-container uk-navbar" data-uk-navbar>
-
-			<div class="uk-navbar-left">
-				<a href="/" class="uk-navbar-item uk-logo">
-					<img src="{{logo}}" alt="{{nb.siteName}} Logo">
-				</a>
-			</div>
-
-			{{#if menu}}
-			<div class="uk-navbar-right">
-				<div id="nav">
-					{{> renderNavigation }}
-				</div>
-				<a href="#nav" class="uk-navbar-toggle" data-uk-toggle="animation: uk-animation-slide-left;"
-					aria-label="Toggle Navigation" hidden>
-					<span data-uk-navbar-toggle-icon></span>
-				</a>
-			</div>
-			{{/if}}
-
-		</nav>
-	</header> --}}
-
 	<header class='header uk-position-absolute uk-position-top'>
 		<img src='./img/header-mobile-tablet.svg' data-uk-svg alt='image' class='uk-hidden@s shape'>
 		<nav class='uk-flex uk-flex-between' data-uk-navbar>
@@ -63,162 +39,16 @@
 				</ul>
 
 				<div class='uk-flex uk-flex-right uk-flex-middle'>
-					<ul
-						class='uk-flex uk-flex-middle uk-margin-remove-vertical uk-padding-remove-left nav-bottom uk-visible@l'>
-						<li class='uk-parent'>
-							<button>The Project
-								<svg viewBox="0 0 24 24">
-									<use xlink:href="./symbol/icons.svg#chevron-down"></use>
-								</svg>
-							</button>
-							<div data-uk-dropdown='mode: click'
-								class='uk-navbar-dropdown uk-navbar-dropdown-bottom-left'>
-								<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
-								<ul class='uk-nav uk-navbar-dropdown-nav uk-position-z-index'>
-									<li><a href='#'>Volunteer with Us</a></li>
-									<li><a href='#'>Submit a Sighting</a></li>
-									<li><a href='#'>Landowner Support</a></li>
-									<li><a href='#'>Fun and learning</a></li>
-									<li><a href='#'>Tour operators & guides</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class='uk-parent'>
-							<button>Protecting Wildlife
-								<svg viewBox="0 0 24 24">
-									<use xlink:href="./symbol/icons.svg#chevron-down"></use>
-								</svg>
-							</button>
-							<div data-uk-dropdown='mode: click'
-								class='uk-navbar-dropdown uk-navbar-dropdown-bottom-left'>
-								<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
-								<ul class='uk-nav uk-navbar-dropdown-nav'>
-									<li><a href='#'>Orkney</a></li>
-									<li><a href='#'>Native Wildlife</a></li>
-									<li><a href='#'>Biosecurity</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class='uk-parent'>
-							<button>Get Involved
-								<svg viewBox="0 0 24 24">
-									<use xlink:href="./symbol/icons.svg#chevron-down"></use>
-								</svg>
-							</button>
-							<div data-uk-dropdown='mode: click'
-								class='uk-navbar-dropdown uk-navbar-dropdown-bottom-left'>
-								<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
-								<ul class='uk-nav uk-navbar-dropdown-nav'>
-									<li><a href='#'>Volunteer with Us</a></li>
-									<li><a href='#'>Submit a Sighting</a></li>
-									<li><a href='#'>Landowner Support</a></li>
-								</ul>
-							</div>
-						</li>
-						<li><a href='#'>News & Events</a></li>
-						<li><a href='#'>Stoat Map</a></li>
-					</ul>
+					{{> renderNavigation}}
+
 					{{> ukButton link="#" class="uk-visible@s" label=cta style="primary" icon="arrow-right"}}
 					<button class='uk-hidden@l burger-menu' data-uk-toggle='target: #menu-nav'
 						aria-label='Open menu navigation'>
 						<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
 						<span role='presentation'></span>
 					</button>
-					<div id='menu-nav' data-uk-modal class='uk-hidden@l'>
-						<div class='uk-modal-dialog uk-modal-body uk-width-1-1'>
-							<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
-							<button class='uk-modal-close-default uk-position-top-right' data-uk-close
-								aria-label='Close navigation menu'></button>
-							<ul class='uk-flex uk-flex-column nav-bottom'>
-								<li class='uk-padding-small uk-padding-remove-vertical uk-hidden@s'><a href='#'>Follow
-										us <i>
-											<svg viewBox="0 0 24 24">
-												<use xlink:href="./symbol/icons.svg#facebook"></use>
-											</svg>
-										</i></a></li>
-								<li><a href='#'>Home</a></li>
-								<li class='uk-parent'>
-									<button>About
-										<svg viewBox="0 0 24 24">
-											<use xlink:href="./symbol/icons.svg#chevron-right"></use>
-										</svg>
-									</button>
-									<div data-uk-dropdown='mode: click' class='uk-navbar-dropdown' id='nav-children-1'>
-										<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
-										<ul class='uk-nav uk-navbar-dropdown-nav uk-position-z-index'>
-											<li class='uk-hidden@l'><button
-													data-uk-toggle='target: #nav-children-1; animation: true'>Back
-													<svg viewBox="0 0 24 24">
-														<use xlink:href="./symbol/icons.svg#chevron-left"></use>
-													</svg>
-												</button>
-											</li>
-											<li class='uk-hidden@l'><span>About</span></li>
-											<li><a href='#'>Volunteer with Us</a></li>
-											<li><a href='#'>Submit a Sighting</a></li>
-											<li><a href='#'>Landowner Support</a></li>
-											<li><a href='#'>Fun and learning</a></li>
-											<li><a href='#'>Tour operators & guides</a></li>
-										</ul>
-									</div>
-								</li>
-								<li class='uk-parent'>
-									<button>Get Involved
-										<svg viewBox="0 0 24 24">
-											<use xlink:href="./symbol/icons.svg#chevron-right"></use>
-										</svg>
-									</button>
-									<div data-uk-dropdown='mode: click' class='uk-navbar-dropdown' id='nav-children-2'>
-										<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
-										<ul class='uk-nav uk-navbar-dropdown-nav'>
-											<li class='uk-hidden@l'><button
-													data-uk-toggle='target: #nav-children-2; animation: true'>Back
-													<svg viewBox="0 0 24 24">
-														<use xlink:href="./symbol/icons.svg#chevron-left"></use>
-													</svg>
-												</button></li>
-											<li class='uk-hidden@l'><span>Get Involved</span>
-											</li>
-											<li><a href='#'>Volunteer with Us</a></li>
-											<li><a href='#'>Submit a Sighting</a></li>
-											<li><a href='#'>Landowner Support</a></li>
-											<li><a href='#'>Fun and learning</a></li>
-											<li><a href='#'>Tour operators & guides</a></li>
-										</ul>
-									</div>
-								</li>
-								<li class='uk-parent'>
-									<button>Protecting Wildlife
-										<svg viewBox="0 0 24 24">
-											<use xlink:href="./symbol/icons.svg#chevron-right"></use>
-										</svg>
-									</button>
-									<div data-uk-dropdown='mode: click' class='uk-navbar-dropdown' id='nav-children-3'>
-										<img class='shape' src='./img/menu-dropdown.svg' data-uk-svg alt='image'>
-										<ul class='uk-nav uk-navbar-dropdown-nav'>
-											<li class='uk-hidden@l'><button
-													data-uk-toggle='target: #nav-children-3; animation: true'>Back
-													<svg viewBox="0 0 24 24">
-														<use xlink:href="./symbol/icons.svg#chevron-left"></use>
-													</svg>
-												</button></li>
-											<li class='uk-hidden@l'><span>Protecting
-													Wildlife</span></li>
-											<li><a href='#'>Orkney</a></li>
-											<li><a href='#'>Native Wildlife</a></li>
-											<li><a href='#'>Biosecurity</a></li>
-										</ul>
-									</div>
-								</li>
-								<li><a href='#'>News & Events</a></li>
-								<li><a href='#'>Stoat Map</a></li>
-								<li class='uk-hidden@s'><a href='#'><abbr
-											title='Frequently Asked Questions'>FAQ</abbr></a></li>
-								<li class='uk-hidden@s'><a href='#'>Media</a></li>
-								<li class='uk-hidden@s'><a href='#'>Contact</a></li>
-							</ul>
-						</div>
-					</div>
+
+					{{> renderMobNavigation}}
 				</div>
 			</div>
 		</nav>
