--- a/src/html/the-project.hbs
+++ b/src/html/the-project.hbs
@@ -16,7 +16,7 @@
         <div class='uk-flex uk-flex-column' data-uk-scrollspy='cls: uk-animation-fade; target: >.uk-flex; delay: 500;'>
             {{#each timelinecard}}
             <div class='uk-flex {{#if odd}}uk-flex-start uk-flex-between{{else}} uk-flex-right{{/if}}'>
-                <div class='uk-width-1-2@s uk-flex {{#if odd}}{{else}} uk-flex-row-reverse uk-flex-between{{/if}}'>
+                <div class='uk-width-1-2@m uk-flex {{#if odd}}{{else}} uk-flex-row-reverse uk-flex-between{{/if}}'>
                     <div class='timeline-card uk-margin-medium'>
                         <h3>{{title}}</h3>
                         {{#if imgExists}}
