--- a/src/scss/abstracts/uikit/_form.scss
+++ b/src/scss/abstracts/uikit/_form.scss
@@ -169,7 +169,7 @@ form {
         }
     }
 
-    @media (max-width: $breakpoint-small) {
+    @media (max-width: $breakpoint-xsmall-max) {
         .uk-grid {
             margin-left: 0;
 
