--- a/src/html/partials/components/banner.hbs
+++ b/src/html/partials/components/banner.hbs
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class='banner-inner'>
-		<div class='uk-background-cover uk-background-fixed uk-height-1-1' data-src="/img/home-banner.jpg" data-uk-img>
+		<div class='uk-background-cover uk-background-fixed uk-height-1-1' data-src="./img/home-banner.jpg" data-uk-img>
 		</div>
 	</div>
 	<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1498.5 846' style='position: absolute;' height='0' width='0'>
