--- a/src/html/partials/components/linkBox.hbs
+++ b/src/html/partials/components/linkBox.hbs
@@ -1,4 +1,4 @@
-<div class='link-box-alt js-link-box uk-card link-box-{{color}}'>
+<div class='link-box-alt js-link-box uk-card{{#if color}} link-box-{{color}}{{/if}}'>
 	{{#if category}}
 	<span class="uk-text-bold">{{category}}</span>
 	{{/if}}
