--- a/src/html/report-a-sighting.hbs
+++ b/src/html/report-a-sighting.hbs
@@ -70,7 +70,7 @@
         </div>
 
         <div class="uk-grid-margin uk-first-column">
-            {{> nbInput label="Was it carrying food?" name="stoat_color" infoCloud="Some info text."}}
+            {{> nbInput label="Was it carrying food?" name="stoat_food" infoCloud="Some info text."}}
         </div>
 
         <div class='Inputfield InputfieldStoatNum nb-form-required uk-grid-margin uk-width-1-1 uk-first-column'
