--- a/src/scss/utils/_print.scss
+++ b/src/scss/utils/_print.scss
@@ -71,10 +71,10 @@
 			margin-left: 0;
 		}
 
-		ul {
+		.uk-grid {
 			display: block;
 
-			li {
+			>div {
 				width: 100%;
 				margin: 0;
 				padding: 0;
