--- a/src/html/home.hbs
+++ b/src/html/home.hbs
@@ -51,12 +51,12 @@
 		</div>
 		{{#> ukGrid class="uk-grid-match uk-grid-large uk-child-width-1-2@m" dataUkHeightMatch=".link-box-title"}}
 		{{#*inline "cells"}}
-		<li>
+		<div>
 			{{> linkBox href="#" category="News" src="./img/link-img-1.jpg" date="3 Dec 2019" title="Welcome to the 83rd Stoat Snippet!" text="Tracking tunnels – also known as footprint tunnels - are used to detect or monitor the presence of mammals in an area by identifying their footprints..."}}
-		</li>
-		<li>
+		</div>
+		<div>
 			{{> linkBox href="#" category="Event" src="./img/link-img-2.jpg" date="8 Aug 2017" title="Major project to protect Orkney’s internationally important wildlife wins Heritage Lottery Fund support" text="A short description text should gently catch the user's eye, initiating the reading of the page content."}}
-		</li>
+		</div>
 		{{/inline}}
 		{{/ukGrid}}
 		<div class="uk-margin-medium-top">
@@ -76,42 +76,23 @@
 		</div>
 		{{#> ukGrid class="uk-grid-match uk-child-width-1-4@l uk-child-width-1-3@m uk-child-width-1-2@s" dataUkHeightMatch=".uk-card"}}
 		{{#*inline "cells"}}
-		<li>
+		<div>
 			{{> involveLink href="#" icon="volunteer" title="Volunteer" }}
-		</li>
-		<li>
+		</div>
+		<div>
 			{{> involveLink stoat="brown-stoat" image="orkney-map.png" href="#" title="Report a stoat" }}
-		</li>
-		<li>
+		</div>
+		<div>
 			{{> involveLink href="#" icon="offer-land-access" title="Offer land access" }}
-		</li>
-		<li>
+		</div>
+		<div>
 			{{> involveLink href="#" icon="donate" title="Donate" }}
-		</li>
+		</div>
 		{{/inline}}
 		{{/ukGrid}}
 	</div>
 </section>
 
-{{/inline}}
-{{/main}}
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1498.5 846' style='position: absolute;' height='0' width='0'>
-	<defs>
-		<clipPath id='svgPathHero' clipPathUnits='objectBoundingBox' transform='scale(0.000667334, 0.00118203309)'>
-			<path class="st0" d="M1493.5,769.2c7.5,34.8,4.2,75.3,4.2,75c-582.1-0.8-1083.4,2.6-1497.3,1.7c0-40.9-0.2-26.8-0.3-40.5
-	c0-7.2,0-17.1-0.1-28.1c0,24.4-0.1,50.2,0,5.4c0.1-22.3,1.5-64.9,2.5-82c1.3-25.4,3.8-40.4,7.6-58c13.2-58.6,25.8-67.6,48.7-89
-	c23-19.7,40.8-28.5,64.5-46.9c12.1-9.2,25.2-17.6,40.1-24.2c63.6-28,107.8-47.9,120.3-50.7c12.5-2.8,41.4-13.5,35.6-10.4
-	c22.5-11.9,45.5-24.6,69.8-37.1c3.3-1.7,7.3-2.9,10.9-4.4c23.1-9.7,53.3-23.9,77.7-34c19.3-8,39.7-21.4,59.5-29.8
-	c36.3-15.3,67.3-35,104.3-51c53.5-23.1,107.5-46.3,161.3-69.4c21.5-9.2,47.8-16.8,60.9-29.1c2.1-2,8.2-3.8,13.3-4.8
-	c35-6.6,59.3-18.6,86-29.7c16.2-6.7,37-11.7,54.8-18.2c18.8-6.8,36.7-14.2,54.4-21.7c20-8.5,39.6-37.3,58.8-46.6
-	c6.6-3.1,41.1-17.9,63.3-25.7c4.5-1.6,11.6-3,20-4.4c4.2-0.7,8.7-1.4,13.3-2c1.2-0.2,2.3-0.3,3.5-0.5c1.2-0.2,2.4-0.3,3.6-0.5
-	c2.4-0.3,4.8-0.6,7.2-0.9c19.3-2.2,38.4-3.8,46.6-4.5c7.8-0.7,16-2,24.4-3.3c4.2-0.7,8.4-1.3,12.7-1.9c2.1-0.3,4.3-0.6,6.4-0.8
-	c2.1-0.3,4.3-0.5,6.5-0.7c17.3-1.5,34.6-0.7,50.9,8.4c18.6,10.3,14,51.8,16.7,81.1c2.9,29.6-7.7,62.4,19.1,114.9
-	c11.2,21.9,28.2,43.5,42.7,65.5c1.7,2.6,3.3,5.3,4,8c7.3,28.5,18.7,92.6,11.8,166.9c-6.9,74.3-10.9,168.7-6.7,209.7
-	C1481.2,696,1484.1,725.6,1493.5,769.2z" />
-		</clipPath>
-	</defs>
-</svg>
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 709.6 399.6' style='position: absolute;' height='0' width='0'>
 	<defs>
 		<clipPath id='svgPathWildlifeTopLeft' clipPathUnits='objectBoundingBox'
@@ -185,3 +166,5 @@
 		</clipPath>
 	</defs>
 </svg>
+{{/inline}}
+{{/main}}
