--- a/src/html/partials/render/renderIcon.hbs
+++ b/src/html/partials/render/renderIcon.hbs
@@ -1,3 +1,3 @@
-<svg viewBox="0 0 512 512" class="uk-svg icon icon-{{name}}{{#if class}} {{class}}{{/if}}" role="presentation">
+<svg viewBox="0 0 512 512" class="uk-svg icon icon-{{name}}{{#if class}} {{class}}{{/if}}">
 	<use xlink:href="./symbol/icons.svg#{{name}}"></use>
 </svg>
