--- a/src/html/stoat-map.hbs
+++ b/src/html/stoat-map.hbs
@@ -21,7 +21,7 @@
                     <form id='nb-form-nb-stoat-map' class='uk-form-stacked InputfieldForm' method='post' data-uk-nb-form
                         novalidate data-colspacing='1'>
                         <div class='uk-flex uk-flex-between uk-flex-bottom'>
-                            <div class='Inputfield InputfieldYear uk-width-1-5@l uk-width-1-3@s uk-width-1-1 uk-first-column'
+                            <div class='Inputfield InputfieldYear uk-width-1-5@l uk-width-1-3@m uk-width-1-2@s uk-first-column'
                                 id='wrap_nb-form-nb-stoat_map_year'>
                                 <label class='uk-form-label' for='nb-form-nb-stoat_map_year'>Year to display on
                                     map</label>
@@ -39,7 +39,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='Inputfield InputfieldSubmit uk-first-column uk-width-1-5@l uk-width-1-3@s uk-width-1-1'
+                            <div class='Inputfield InputfieldSubmit uk-first-column uk-width-1-5@l uk-width-1-3@m uk-width-1-2@s uk-flex uk-flex-right'
                                 id='wrap_nb-form-nb-stoat_map_submit'>
                                 <div class='nb-form-content'>
                                     <div role='alert'></div>
