--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -33,13 +33,13 @@ $line-height: 1.5;
 //
 $white: #fff;
 $black: #241d1e;
-$primary: #ff8813;
+$primary: #c75300;
 $secondary: #4b351c;
 $ochre: #f6ea8b;
 $ochre-dark: #c3ba6d;
 $brown-medium: #8b837b;
 $brown-dark: #3d2a15;
-$brick: #c75300;
+$brick: #ff8813;
 $brick-dark: #bb5604;
 $blue-light: #dce7f3;
 $blue-facebook: #3d599c;
@@ -52,9 +52,9 @@ $gray-soft: #71675e;
 $gray-ice: #dcd8d3;
 $gray-medium: #c5c1bc;
 $green: #7c662a;
-$green-alt: #9a831f;
+$green-alt-light: #9a831f;
+$green-alt: #87741c;
 $green-dark: #705f26;
-$green-dark-alt: #87741c;
 $green-golden: #9e8f20;
 $red: #ea4335;
 $success: #32d296;
