--- a/src/scss/components/_links-section.scss
+++ b/src/scss/components/_links-section.scss
@@ -50,7 +50,7 @@
 
             &::after {
                 position: absolute;
-                background-color: rgba($green-dark-alt, .8);
+                background-color: rgba($green-alt, .8);
                 left: 0;
                 top: 0;
                 bottom: 0;
@@ -61,7 +61,7 @@
             @supports (mix-blend-mode: multiply) {
                 &::after {
                     mix-blend-mode: multiply;
-                    background-color: $green-dark-alt;
+                    background-color: $green-alt;
                 }
             }
         }
