--- a/src/scss/components/_stoat-animation.scss
+++ b/src/scss/components/_stoat-animation.scss
@@ -5,7 +5,7 @@
 }
 
 .stoat-pin {
-    background-color: $primary;
+    background-color: $brick;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -46,7 +46,7 @@
     }
 
     &::after {
-        border: 2px solid $primary;
+        border: 2px solid $brick;
     }
 }
 
@@ -58,7 +58,7 @@ $pulses: 4;
     $delay: $i * .8;
 
     .pulse:nth-of-type(#{$i}) {
-        background-color: $primary;
+        background-color: $brick;
         width: 100%;
         height: 100%;
 
@@ -81,31 +81,31 @@ $pulses: 4;
 
     @keyframes border-pulse-#{$i} {
         0% {
-            background-color: rgba($primary, .8);
+            background-color: rgba($brick, .8);
             transform: scale(1);
             border-width: 2px;
         }
 
         25% {
-            background-color: rgba($primary, .6);
+            background-color: rgba($brick, .6);
             transform: scale(1.5);
             border-width: 1.5px;
         }
 
         50% {
-            background-color: rgba($primary, .4);
+            background-color: rgba($brick, .4);
             transform: scale(2);
             border-width: 1px;
         }
 
         75% {
-            background-color: rgba($primary, .2);
+            background-color: rgba($brick, .2);
             transform: scale(2.5);
             border-width: .5px;
         }
 
         100% {
-            background-color: rgba($primary, 0);
+            background-color: rgba($brick, 0);
             transform: scale(3);
             border-color: transparent;
         }
